@startuml
left to right direction

class User {
		int id
    string mail
    string name
    string password
    DateTime registrationDate
    string verifToken
    int role
}

class Post {
		int postId
    string postTitle
    string postSubtitle
    string postContent
    string postImage
    string postImageDescr
    DateTime postCreaDate
    DateTime postEditDate
    User postAuthor
}

class Comment {
		int commentId
    string commentContent
    User commentAuthor
    Post commentPost
    Boolean commentValidation
    DateTime commentDate
    DateTime commentValiDate
}

User "1"--"n" Post :writes
User "1"--"n" Comment :writes
Post "1"--"n" Comment :has
@enduml
